[package]
name = "hypermon"
version = "0.1.0"
authors = ["Adam <sector-f@users.noreply.github.com>"]

[dependencies]
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.24"
clap = "2.32.0"
prettytable-rs = "0.7.0"
libvirt-sys = { git = "https://github.com/sector-f/new-libvirt-sys.git" }
new-libvirt = { git = "https://github.com/sector-f/new-libvirt-rs.git" }
